[project]
name = "topological-gc-simulator"
version = "0.1.0"
description = "Discrete-event simulator for topological garbage collection of intermediate data in DAG-oriented workflow systems"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Leonid Romanychev" }]
keywords = [
    "workflow",
    "garbage-collection",
    "dag",
    "buffer-management",
    "discrete-event-simulation",
]

# Only the plotting scripts need a third-party package; the model core
# (config.py, topological_gc.py) is pure standard-library Python.
dependencies = ["matplotlib>=3.7"]

[project.urls]
Homepage = "https://github.com/romanychev-l/topological-gc-simulator"
Repository = "https://github.com/romanychev-l/topological-gc-simulator"

[tool.uv]
package = false
